--- a/AwayDay2012/AwayDay2012-Info.plist
+++ b/AwayDay2012/AwayDay2012-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.thoughtworks.ios.awayDay2012</string>
+	<string>com.thoughtworks.ios.awayday2012</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
