--- a/AwayDay2012/AwayDay2012-Info.plist
+++ b/AwayDay2012/AwayDay2012-Info.plist
@@ -8,6 +8,24 @@
 	<string>AwayDay2012</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Icon.png</string>
+		<string>Icon@2x.png</string>
+	</array>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>Icon.png</string>
+				<string>Icon@2x.png</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.thoughtworks.ios.awayday2012</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -22,6 +40,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>0.1.4</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
